# andreas_sw_engineering_technical_assessment

a_programming_paradigms/: CMakeLists.txt  package.xml
a_programming_paradigms/src/: cd_player.cpp  cd_player.hpp  main.cpp
b_code_refactor/: CMakeLists.txt  package.xml
b_code_refactor/src/: main.cpp  robot.cpp  robot.hpp
c_system_design/: system_overview.md
