<?xml version="1.0"?>
<package format="2">
  <name>programming_paradigms</name>
  <version>0.0.1</version>
  <description>A ROS 2 programming paradigms</description>
  <maintainer email="andreaseleftheriades@gmail.com">Andreas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>